Fixed chat overflow

--- a/client/src/components/Chat/components/Chat users list/style.css
+++ b/client/src/components/Chat/components/Chat users list/style.css
@@ -68,3 +68,11 @@
     border-radius: 10px;
     margin: 5px 0;
 }
+
+@media screen and (max-width:768px){
+    .all-chats-box{
+        top: 60px;
+        min-width: 100%;
+    }
+
+}
